2005-04-20  Petr Ovtchenkov  <ptr@island...>

	* src/num_get_float.c: use uint64_t for 64-bit, but unsigned long long
	for constants. [this is problem exploration, not final fix]

2005-04-16  Francois Dumont  <dums@stlport...>

	* test/unit/cppunit/test_main.cpp: Patch from Michael Fink to improve
	the macro filter for including windows.h (UNDER_CE rather than WIN32).

	* build/test/unit/STATUS: Update from Michael Fink and myself.


	* build/Makefiles/nmake: Apply Michael Fink patch to generate .pdb file

	even in release mode and to install them in bin and lib folders next to

	the .dll and .lib files.


	* stlport/stl/_algobase.c: Add missing const in return type of the const 
	version of find specialized for const char*.

2005-04-16  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_algobase.c: memchr return NULL if value not found,
	while find() [specializtion for char *] should return last
	[see record 2005-02-27 below]. Thanks Joshua Berne for report.

	* test/unit/find_test.cpp: if char not found, char specialization of
	find() should return last, not NULL.

2005-04-14  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_list.h, _slist.h: add this-> resolution to get_allocator
	[required in the member templates to resolve possible ambiguity]

2005-04-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_list.h, _slist.h: Add missing get_allocator() call when
	building temporary list or slist instances in insert methods.

2005-04-12  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: solution 2005-04-12 not useful. Simplified schema,
	semantically equivalent to Francois', but without extra function definition
	[see records 2005-03-31 and 2005-04-01]

2005-04-12  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: check if we undefine previously defined errno

2005-04-11  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: save original errno definition

2005-04-10  Petr Ovtchenkov  <ptr@island...>

	* STLport (repository): STLport 5.0 RC3
